k8s/development/mlOps/deployKF/mlops-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-argocd-ingress
  namespace: mlops-argocd
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mlargo.dev-tw-style.duckdns.org
    secretName: dev-tw-style-duckdns-tls-secret
  rules:
  - host: mlargo.dev-tw-style.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
